agregue el gitignore

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
              <!-- start box 1 -->
             <figure class="products">
             <figcaption>Producto 1</figcaption>
-            <img src="./img/difusor.jpeg" alt="imagen de un difusor con palos de bamboo">
+            <img src="./img/difusor 6.jpeg" alt="imagen de un difusor de varillas de bamboo de vidrio">
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio labore eaque placeat, vel exercitationem deleniti qui. Tenetur, culpa natus incidunt repellendus quos dignissimos alias, voluptatibus quaerat sequi ducimus necessitatibus quas.</p>
             <a href="#">ver mas</a>
             </figure>
@@ -56,7 +56,7 @@
              <!-- start box 2 -->
             <figure class="products">
                 <figcaption>Producto 2</figcaption>
-                <img src="./img/difusor 2.jpeg" alt="imagen de un difusor">
+                <img src="./img/difusor.jpeg" alt="imagen de un difusor color rosa de ceramica con un fondo rosa">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat voluptatum tempora repudiandae aliquid, possimus officia. A maxime dolorum nihil distinctio est minus incidunt officiis quis doloribus. Odit tempora sint dolores.</p>
                 <a href="#">ver mas</a>
             </figure>
@@ -64,7 +64,7 @@
               <!-- start box 3 -->
             <figure class="products">
                 <figcaption>Producto 3</figcaption>
-                <img src="./img/difusor 3.jpeg" alt="imagen de un difusor">
+                <img src="./img/difusor 3.jpeg" alt="imagen de un difusor de vidrio con varillas de bamboo, una vela y un florero con una rosa">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat voluptatum tempora repudiandae aliquid, possimus officia. A maxime dolorum nihil distinctio est minus incidunt officiis quis doloribus. Odit tempora sint dolores.</p>
                 <a href="#">ver mas</a>
             </figure>
@@ -72,7 +72,7 @@
              <!-- start box 4-->
             <figure class="products">
             <figcaption>Producto 4</figcaption>
-            <img src="./img/vela.jpeg" alt="imagen de una vela">
+            <img src="./img/vela 6.jpeg" alt="imagen de una vela blanca con envase rosa">
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio labore eaque placeat, vel exercitationem deleniti qui. Tenetur, culpa natus incidunt repellendus quos dignissimos alias, voluptatibus quaerat sequi ducimus necessitatibus quas.</p>
             <a href="#">ver mas</a>
             </figure>
@@ -80,7 +80,7 @@
               <!-- start box 5 -->
             <figure class="products">
                 <figcaption>Producto 5</figcaption>
-                <img src="./img/vela 5.jpeg" alt="imagen de una vela">
+                <img src="./img/vela 5.jpeg" alt="imagen de una vela redonda de color rosa claro apoyada sobre una tela con flores">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat voluptatum tempora repudiandae aliquid, possimus officia. A maxime dolorum nihil distinctio est minus incidunt officiis quis doloribus. Odit tempora sint dolores.</p>
                 <a href="#">ver mas</a>
             </figure>
@@ -88,7 +88,7 @@
               <!-- start box 6 -->
              <figure class="products">
                 <figcaption>Producto 5</figcaption>
-                <img src="./img/vela 4.jpeg" alt="imagen de una vela">
+                <img src="./img/vela 4.jpeg" alt="imagen de una vela prendida de color rosa, blanco y lila">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat voluptatum tempora repudiandae aliquid, possimus officia. A maxime dolorum nihil distinctio est minus incidunt officiis quis doloribus. Odit tempora sint dolores.</p>
                 <a href="#">ver mas</a>
             </figure>
