--- a/pages/Blog.html
+++ b/pages/Blog.html
@@ -6,13 +6,14 @@
     <title>Quienes somos</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../css/style.css">
      <!-- css BS -->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+     <!-- mi css -->
+     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <!--starts nav -->
-    <nav class="navbar navbar-expand-md menu">
+    <nav class="navbar navbar-expand-md menu sticky-top">
         <div class="container-fluid">
             <!-- aca va mi logo -->
           <a class="navbar-brand" href="../index.html">
@@ -58,7 +59,7 @@
                 <div class="card-img-overlay">
                   <h5 class="card-title text-center"> Titulo 1</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum ab velit voluptate, officiis ratione dolor?</p>
-                  <a href="#" class="btn bg-btn"> Ver mas </a>
+                  <a href="#" class="btn bg-btn text-center"> Ver mas </a>
                 </div>
               </div>
         </article> <!-- ends card 1 -->
