--- a/pages/Quienes somos.html
+++ b/pages/Quienes somos.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!--starts nav -->
-    <nav class="navbar navbar-expand-md menu sticky-top">
+    <nav class="navbar navbar-expand-md menu">
         <div class="container-fluid">
             <!-- aca va mi logo -->
           <a class="navbar-brand" href="../index.html">
